--- a/src/apisof.net/Shared/MainLayout.razor
+++ b/src/apisof.net/Shared/MainLayout.razor
@@ -80,6 +80,6 @@
     }
     else
     {
-        <a href="@CatalogJobInfo.DetailsUrl">@CatalogJobInfo.Date.Date.ToShortDateString()</a>
+        <a href="@CatalogJobInfo.DetailsUrl">@CatalogJobInfo.Date.Date.ToShortDateString()<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a>
     }
 </div>
