--- a/src/apisof.net/Pages/CatalogRoot.razor
+++ b/src/apisof.net/Pages/CatalogRoot.razor
@@ -11,7 +11,7 @@
                     <a href="@Link.ForDiff()">@left vs @right</a>
                 </li>
             }
-            <li class="breadcrumb-item"><Glyph Kind="GlyphKind.Database"/> <a href="@Link.ForCatalog()">Catalog</a></li>
+            <li class="breadcrumb-item flex-inline-breakable"><Glyph Kind="GlyphKind.Database" /> <a href="@Link.ForCatalog()">Catalog</a></li>
         </ol>
     </nav>
 </div>
@@ -35,9 +35,8 @@
                         var childData = context.BrowsingData;
                         var childCssClasses = childData?.CssClasses ?? string.Empty;
                         var childMarkup = childData?.AdditionalMarkup;
-                        <li>
+                        <li class="flex-inline-breakable">
                             <Glyph Kind="@child.Kind.GetGlyph()" /> <a class="@childCssClasses" href="@Link.For(child)">@child.Name  <span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> @childMarkup
-
                         </li>
                     }
                 </ItemLimiter>
