--- a/src/apisof.net/Shared/ApiDetails.razor
+++ b/src/apisof.net/Shared/ApiDetails.razor
@@ -15,11 +15,11 @@
             {
                 if (api == Api)
                 {
-                    <li class="breadcrumb-item active" aria-current="page"><Glyph Kind="@api.Kind.GetGlyph()" /> @api.Name</li>
+                    <li class="breadcrumb-item flex-inline-breakable active" aria-current="page"><Glyph Kind="@api.Kind.GetGlyph()" /> @api.Name</li>
                 }
                 else
                 {
-                    <li class="breadcrumb-item"><Glyph Kind="@api.Kind.GetGlyph()" /> <a href="@Link.For(api)">@api.Name</a></li>
+                    <li class="breadcrumb-item flex-inline-breakable"><Glyph Kind="@api.Kind.GetGlyph()" /> <a href="@Link.For(api)">@api.Name</a></li>
                 }
             }
         </ol>
@@ -38,11 +38,13 @@
 
                 @if (Parent == Api)
                 {
-                    <Glyph Kind="@Parent.Kind.GetGlyph()" /> <span class="font-weight-bold @parentCssClasses">@Parent.Name</span> @parentMarkup
+                    <Glyph Kind="@Parent.Kind.GetGlyph()" /> <span class="font-weight-bold text-breakable @parentCssClasses">@Parent.Name</span> @parentMarkup
                 }
                 else
                 {
-                    <Glyph Kind="@Parent.Kind.GetGlyph()" /> <a class="@parentCssClasses" href="@Link.For(Parent)">@Parent.Name</a> @parentMarkup
+                    <span class="flex-inline-breakable">
+                        <Glyph Kind="@Parent.Kind.GetGlyph()" /> <a class="@parentCssClasses" href="@Link.For(Parent)">@Parent.Name<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> @parentMarkup
+                    </span>
                 }
 
                 <ul class="list-unstyled pl-4">
@@ -63,7 +65,7 @@
                             }
                             else
                             {
-                                <Glyph Kind="@child.Kind.GetGlyph()" /> <a class="@childCssClasses" href="@Link.For(child)">@child.Name</a> @childMarkup
+                                <Glyph Kind="@child.Kind.GetGlyph()" /> <a class="@childCssClasses" href="@Link.For(child)">@child.Name<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> @childMarkup
                             }
                         </li>
                     }
@@ -85,7 +87,7 @@
                             }
                             else
                             {
-                                <Glyph Kind="GlyphKind.ExtensionMethod" /> <a class="@extensionCssClasses" href="@Link.For(extensionMethod)">@extensionMethod.ExtensionMethod.Name</a> @extensionMarkup
+                                <Glyph Kind="GlyphKind.ExtensionMethod" /> <a class="@extensionCssClasses" href="@Link.For(extensionMethod)">@extensionMethod.ExtensionMethod.Name<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> @extensionMarkup
                             }
                         </li>
                     }
@@ -138,7 +140,7 @@
                     <tr>
                         <th>Implementation</th>
                         <td>
-                            <a href="@SourceUrl" target="_blank">Source</a>
+                            <a href="@SourceUrl" target="_blank">Source<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 }
@@ -150,7 +152,7 @@
                     <tr>
                         <th>Help</th>
                         <td>
-                            <a href="@HelpUrl" target="_blank">Documentation</a>
+                            <a href="@HelpUrl" target="_blank">Documentation<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a>
                         </td>
                     </tr>
                 }
@@ -222,7 +224,15 @@
                                     ? "fx-right"
                                     : "";
 
-                                    <span class="fx-version @versionClass @selectedClass @diffClass m-1" role="button" title="@title" @onclick="e => VersionClick(e, availability.Framework)" @onclick:preventDefault="true" @onclick:stopPropagation="true">
+                                    <span class="fx-version @versionClass @selectedClass @diffClass m-1" role="button" tabindex="0" title="@title" @onclick="e => VersionClick(e, availability.Framework)" @onclick:preventDefault="true" @onclick:stopPropagation="true"
+                                          @onkeyup:stopPropagation="true"
+                                          @onkeyup:preventDefault="true"
+                                          @onkeyup="@(e => {
+                                          if (e.Key == " " || e.Key == "Enter")
+                                          {
+                                              VersionClick(null, availability.Framework);
+                                          }
+                                      })">
                                         @availability.Framework.GetBaseFrameworkOrSelf().GetVersionDisplayString()
                                     </span>
                                 }
@@ -277,7 +287,15 @@
                                         ? "fx-right"
                                         : "";
 
-                                        <span class="fx-version @versionClass @selectedClass @diffClass m-1" role="button" title="@title" @onclick="e => VersionClick(e, availability.Framework)" @onclick:preventDefault="true" @onclick:stopPropagation="true">
+                                        <span class="fx-version @versionClass @selectedClass @diffClass m-1" role="button" tabindex="0" title="@title" @onclick="e => VersionClick(e, availability.Framework)" @onclick:preventDefault="true" @onclick:stopPropagation="true"
+                                              @onkeyup:stopPropagation="true"
+                                              @onkeyup:preventDefault="true"
+                                              @onkeyup="@(e => {
+                                              if (e.Key == " " || e.Key == "Enter")
+                                              {
+                                                  VersionClick(null, availability.Framework);
+                                              }
+                                          })">
                                             @availability.Framework.GetPlatformVersionDisplayString()
                                         </span>
                                     }
@@ -346,7 +364,7 @@
                     <tr>
                         <th>Package</th>
                         <td>
-                            <a href="https://nuget.org/packages/@package.Name/@package.Version">@package.Name (@package.Version)</a> <span class="small text-muted">@folder</span>
+                            <a href="https://nuget.org/packages/@package.Name/@package.Version">@package.Name (@package.Version)<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> <span class="small text-muted">@folder</span>
                         </td>
                     </tr>
                 }
@@ -368,7 +386,7 @@
                         <td>
                             @if (o.Url is not null)
                             {
-                                <a href="@o.Url">@message</a>
+                                <a href="@o.Url">@message<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a>
                             }
                             else
                             {
@@ -390,7 +408,7 @@
                             @preview.Description
                             @if (preview.Url is not null)
                             {
-                                <a class="pl-2" href="@preview.Url">(more details)</a>
+                                <a class="pl-2" href="@preview.Url">(more details)<span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a>
                             }
                         </td>
                     </tr>
