Implement IDisposable in CatalogItem and improve search result handling in CatalogService

--- a/src/apisof.net/Pages/CatalogRoot.razor
+++ b/src/apisof.net/Pages/CatalogRoot.razor
@@ -11,7 +11,9 @@
                     <a href="@Link.ForDiff()" class="text-underline">@left vs @right</a>
                 </li>
             }
-            <li class="breadcrumb-item flex-inline-breakable"><Glyph Kind="GlyphKind.Database" /> <a href="@Link.ForCatalog()" class="text-underline">Catalog</a></li>
+            <li class="breadcrumb-item flex-inline-breakable">
+                <Glyph Kind="GlyphKind.Database" /> <a href="@Link.ForCatalog()" class="text-underline">Catalog</a>
+            </li>
         </ol>
     </nav>
 </div>
@@ -20,24 +22,29 @@
 
     <ul class="list-unstyled">
         <li>
-            <Glyph Kind="GlyphKind.Database"/> <span class="font-weight-bold">Catalog</span>
+            <Glyph Kind="GlyphKind.Database" /> <span class="font-weight-bold">Catalog</span>
 
             <ul class="list-unstyled pl-4">
                 @{
                     var items = CatalogService.Catalog.RootApis
-                        .Order()
-                        .Select(a => (Api: a, BrowsingData: BrowsingContext.GetData(a)))
-                        .Where(a => !a.BrowsingData?.Excluded ?? true);
+                        .Order();
                 }
                 <ItemLimiter ItemSource="items" Limit="650">
                     @{
-                        var child = context.Api;
-                        var childData = context.BrowsingData;
+                        var child = context;
+                        var childData = BrowsingContext.GetData(child);
+                        var childExcluded = childData?.Excluded ?? false;
                         var childCssClasses = childData?.CssClasses ?? string.Empty;
                         var childMarkup = childData?.AdditionalMarkup;
-                        <li class="flex-inline-breakable">
-                            <Glyph Kind="@child.Kind.GetGlyph()" /> <a class="@childCssClasses" href="@Link.For(child)">@child.Name  <span class="oi oi-link-intact ml-1 small" aria-hidden="true"></span></a> @childMarkup
-                        </li>
+
+                        if (!childExcluded)
+                        {
+                            <li class="flex-inline-breakable">
+                                <Glyph Kind="@child.Kind.GetGlyph()" /> <a class="@childCssClasses"
+                                                                       href="@Link.For(child)">@child.Name <span class="oi oi-link-intact ml-1 small"
+                                                                          aria-hidden="true"></span></a> @childMarkup
+                            </li>
+                        }
                     }
                 </ItemLimiter>
             </ul>
